--- a/Neural_network_from_scratch.ipynb
+++ b/Neural_network_from_scratch.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#|default_exp functions"
+    "#|default_exp Neural_network_from_scratch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,10 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#|export\n",
     "def _crossentropy_loss( y_hat , y: int): \n",
     "    return -y_hat[y] + y_hat.exp().sum().log() \n",
     "#calculated skipping the softmax calculation, and instead applying simplified formula \n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +62,14 @@
     "    extending this implementation to handle batches is straightforward. Since derivatives are linear operators, \n",
     "    backpropagation for a batch of vectors is conceptually similar to that for a single vector.\n",
     "    \"\"\"\n",
-    "    def __init__(self, layers, input_size ): \n",
+    "    def __init__(self, layers, input_size, seed=42): \n",
     "\n",
     "        self.input_size=input_size\n",
-    "\n",
+    "        torch.manual_seed(seed)\n",
     "        #start creating the layers with the correct matrix size\n",
     "        nrows= input_size\n",
     "        ncolumns=layers[0].n_perceptrons\n",
-    "        self.sequence=[_Layer(size=(nrows ,ncolumns), activation= layers[0].activation )]\n",
+    "        self.sequence=[_Layer(size=(nrows ,ncolumns), activation= layers[0].activation)]\n",
     "        for layer in layers[1:]:\n",
     "            nrows= ncolumns\n",
     "            ncolumns = layer.n_perceptrons\n",
@@ -118,67 +119,77 @@
     "            #if layer.activation == \"none\":\n",
     "        return vector\n",
     "    \n",
-    "    def train(self, train_x, train_y, val_x, val_y, max_epochs=3, seed=42):\n",
+    "    def train(self, train_x, train_y, val_x, val_y, max_epochs=3, step_size=0.001):\n",
     "        #add initial train and validation loss and accuracy\n",
     "        n_train=len(train_x)\n",
-    "        n_val=len(train_x)\n",
+    "        n_val=len(val_x)\n",
     "\n",
     "        for epoch in range(max_epochs):\n",
     "            train_loss=0\n",
     "            val_loss =0\n",
+    "            train_correct = 0  # counter for correct predictions in training\n",
+    "            val_correct = 0 \n",
+    "\n",
     "            for x,y in zip(train_x,train_y): #batch size 1, since it's a simplified, trivial to modify to more\n",
     "                vectors = self._predict(x)\n",
     "                loss= _crossentropy_loss(vectors[-1],y)\n",
     "                #if correct, n_corect += 1\n",
     "                train_loss+=loss/n_train\n",
-    "                self._backpropagate_error(vectors,y)\n",
+    "\n",
+    "                pred = vectors[-1].argmax().item()\n",
+    "                if pred == y:\n",
+    "                    train_correct += 1\n",
+    "\n",
+    "                self._backpropagate_error(vectors,y, step_size=step_size)\n",
     "            \n",
     "            for x,y in  zip(val_x,val_y):#test validation loss and accuracy\n",
-    "                vectors = self._predict(x)\n",
-    "                loss = _crossentropy_loss(vectors[-1],y)\n",
+    "                vector = self._predict_val(x)\n",
+    "                loss = _crossentropy_loss(vector,y)\n",
     "                #if correct, n_corect += 1\n",
     "                val_loss += loss/n_val\n",
-    "            print(f\"\\n\\nepoch {epoch}\\n\\ntrain_loss = {train_loss}\")\n",
-    "            print(f\"\\nvalidation_loss = {val_loss}\")\n",
+    "                pred = vector.argmax().item()\n",
+    "                if pred == y:\n",
+    "                    val_correct += 1\n",
+    "\n",
+    "            train_accuracy = train_correct / n_train\n",
+    "            val_accuracy = val_correct / n_val\n",
+    "\n",
+    "            print(f\"Epoch {epoch:>3} | Train Loss: {train_loss:.4f} | Train Acc: {train_accuracy:.4f} | Val Loss: {val_loss:.4f} | Val Acc: {val_accuracy:.4f}\")\n",
+    "\n",
     "    \n",
-    "    def _backpropagate_error(self, vectors, y, step_size=0.01):\n",
+    "    def _backpropagate_error(self, vectors, y, step_size=0.001):\n",
+    "        # gradient descent is made easier by the chain rule of Jacobian matrices and also some simplification\n",
+    "        # of calculations that comes out since these jacobian matrices for the weights are zero except where the corresponding\n",
+    "        # row in the vector i that comes out after multiplication of the weights matrix W_i with vector i-1...\n",
+    "        # this means we can simply calculate the gradient of the weights doing the outer product v_i-1 by dLdzi\n",
     "\n",
     "        #relu activation \n",
     "        v=vectors[-1]\n",
-    "        dLdzi=v.exp()/v.exp().sum() #notice that dLdzi contains the predicted softmax probabilities\n",
+    "        v_stable = v - v.max()\n",
+    "        dLdzi=v_stable.exp()/v_stable.exp().sum() #notice that dLdzi contains the predicted softmax probabilities\n",
     "        dLdzi[y]-=1 #loss derivative for increasing the correct prediciton is negative, simply subtracting -1 \n",
     "\n",
     "        #now let's see the matrix of weight Wk, the gradient is trivially calculated as\n",
     "         #it's an outer product, because with the chain rule, the previous vector value is involved and the resulting vector gradient is involved\n",
-    "        \n",
-    "\n",
-    "        for i in range(-2,-len(vectors)+1,-1):\n",
+    "        for i in range(-2,-len(vectors)-1,-1):\n",
     "            #print(f\"layer: {i+1}\\nweights before:\\n{self.sequence[i+1].weights}\")\n",
     "            v=vectors[i]\n",
     "            #now let's see the matrix of weight Wk, the gradient is trivially calculated as\n",
-    "            dLdw=torch.outer(dLdzi,v )  #it's an outer product, because with the chain rule, the previous vector value is involved and the resulting vector gradient is involved\n",
+    "            dLdw=torch.outer(v,dLdzi )  #it's an outer product, because with the chain rule, the previous vector value is involved and the resulting vector gradient is involved\n",
     "            \n",
     "            #i calculate chain rule iteratively\n",
     "            mask = (v > 0).to(dtype=dLdzi.dtype) \n",
-    "            dLdzi = (self.sequence[i+1].weights.t() @ dLdzi) * mask #compute the gradient for previous z vector, \n",
+    "            dLdzi = (self.sequence[i+1].weights @ dLdzi) * mask #compute the gradient for previous z vector, \n",
     "\n",
     "            #each column ith element must be subtracted of the value of the previous vector ith value\n",
     "            self.sequence[i+1].weights -= dLdw*step_size #descend the gradient for the weights \n",
     "            #print(f\"\\nweights after:\\n{self.sequence[i+1].weights}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -190,6 +201,8 @@
     }
    ],
    "source": [
+    "#|export\n",
+    "\n",
     "import torch\n",
     "from torchvision import datasets, transforms\n",
     "\n",
@@ -211,61 +224,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence = [Layer(10,\"relu\") for _ in range(3)] + [Layer(10,\"none\")]\n",
-    "\n",
-    "m1= MLP_Model( layers = sequence , input_size= 784)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "epoch 0\n",
-      "\n",
-      "train_loss = 4.273360729217529\n",
-      "\n",
-      "validation_loss = 11.063234329223633\n",
-      "\n",
-      "\n",
-      "epoch 1\n",
-      "\n",
-      "train_loss = 4.247875213623047\n",
-      "\n",
-      "validation_loss = 10.947446823120117\n",
-      "\n",
-      "\n",
-      "epoch 2\n",
-      "\n",
-      "train_loss = 4.221408843994141\n",
-      "\n",
-      "validation_loss = 10.820184707641602\n"
+      "Epoch   0 | Train Loss: 2.2013 | Train Acc: 0.1525 | Val Loss: 2.0638 | Val Acc: 0.2089\n",
+      "Epoch   1 | Train Loss: 2.0453 | Train Acc: 0.2182 | Val Loss: 1.9488 | Val Acc: 0.2593\n",
+      "Epoch   2 | Train Loss: 1.2943 | Train Acc: 0.5268 | Val Loss: 0.5506 | Val Acc: 0.8527\n",
+      "Epoch   3 | Train Loss: 0.3877 | Train Acc: 0.8940 | Val Loss: 0.3395 | Val Acc: 0.9125\n",
+      "Epoch   4 | Train Loss: 0.2886 | Train Acc: 0.9234 | Val Loss: 0.3226 | Val Acc: 0.9200\n",
+      "Epoch   5 | Train Loss: 0.2506 | Train Acc: 0.9338 | Val Loss: 0.2924 | Val Acc: 0.9294\n",
+      "Epoch   6 | Train Loss: 0.2264 | Train Acc: 0.9401 | Val Loss: 0.2639 | Val Acc: 0.9368\n",
+      "Epoch   7 | Train Loss: 0.2068 | Train Acc: 0.9448 | Val Loss: 0.2480 | Val Acc: 0.9414\n",
+      "Epoch   8 | Train Loss: 0.1928 | Train Acc: 0.9483 | Val Loss: 0.2215 | Val Acc: 0.9465\n",
+      "Epoch   9 | Train Loss: 0.1818 | Train Acc: 0.9521 | Val Loss: 0.2264 | Val Acc: 0.9444\n",
+      "Epoch  10 | Train Loss: 0.1734 | Train Acc: 0.9540 | Val Loss: 0.2056 | Val Acc: 0.9499\n",
+      "Epoch  11 | Train Loss: 0.1647 | Train Acc: 0.9564 | Val Loss: 0.1992 | Val Acc: 0.9516\n",
+      "Epoch  12 | Train Loss: 0.1575 | Train Acc: 0.9585 | Val Loss: 0.2172 | Val Acc: 0.9490\n",
+      "Epoch  13 | Train Loss: 0.1535 | Train Acc: 0.9587 | Val Loss: 0.2209 | Val Acc: 0.9463\n",
+      "Epoch  14 | Train Loss: 0.1488 | Train Acc: 0.9608 | Val Loss: 0.2209 | Val Acc: 0.9466\n",
+      "Epoch  15 | Train Loss: 0.1419 | Train Acc: 0.9620 | Val Loss: 0.2218 | Val Acc: 0.9503\n",
+      "Epoch  16 | Train Loss: 0.1417 | Train Acc: 0.9629 | Val Loss: 0.2045 | Val Acc: 0.9518\n",
+      "Epoch  17 | Train Loss: 0.1382 | Train Acc: 0.9642 | Val Loss: 0.2334 | Val Acc: 0.9472\n",
+      "Epoch  18 | Train Loss: 0.1342 | Train Acc: 0.9648 | Val Loss: 0.2145 | Val Acc: 0.9517\n",
+      "Epoch  19 | Train Loss: 0.1305 | Train Acc: 0.9658 | Val Loss: 0.1982 | Val Acc: 0.9550\n"
      ]
     }
    ],
    "source": [
+    "#|export\n",
+    "\n",
+    "sequence = [Layer(32,\"relu\") for _ in range(2)] +[Layer(16,\"relu\") for _ in range(1)]+ [Layer(10,\"none\")]\n",
+    "\n",
+    "m1= MLP_Model( layers = sequence , input_size= 784, seed=1234)\n",
+    "\n",
     "train_x, train_y =zip(*train_dataset)\n",
     "test_x, test_y =zip(*test_dataset)\n",
     "\n",
-    "m1.train(train_x=train_x[:5], train_y=train_y[:5], val_x=test_x[10:15], val_y=test_y[10:15], max_epochs=3, seed=42)"
+    "#train and validate on the whole dataset\n",
+    "m1.train(train_x=train_x, train_y=train_y, val_x=test_x, val_y=test_y, step_size=0.01, max_epochs=20)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -301,11 +302,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "sequence = [Layer(10,\"relu\") for _ in range(2)] + [Layer(10,\"none\")]\n",
+    "\n",
+    "m1= MLP_Model( layers = sequence , input_size= 784)\n",
+    "\n",
+    "train_x, train_y =zip(*train_dataset)\n",
+    "test_x, test_y =zip(*test_dataset)\n",
+    "\n",
+    "m1.train(train_x=train_x[:5], train_y=train_y[:5], val_x=test_x[:5], val_y=test_y[:5], step_size=0.01, max_epochs=20, seed=42)"
+   ]
   }
  ],
  "metadata": {
