added gradient clipping and improved weight initialization

--- a/Neural_network_from_scratch.ipynb
+++ b/Neural_network_from_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
-    "import torch "
+    "import torch \n",
+    "import math\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
     "class _Layer: #version that gets defined according to the previous layer output size, should not be used by the user\n",
     "    def __init__(self, size, activation=\"relu\"):\n",
     "        self.size=size\n",
-    "        self.weights=2*torch.rand(self.size)-1 #initialize as a matrix random matrix between -1 and 1\n",
+    "        self.weights = torch.randn(*self.size) * math.sqrt(2.0 / size[1]) # He initialization to prevent gradient explosion or deflation\n",
     "        self.activation= activation\n",
     "\n",
     "\n",
@@ -67,12 +68,14 @@
     "        self.input_size=input_size\n",
     "        torch.manual_seed(seed)\n",
     "        #start creating the layers with the correct matrix size\n",
-    "        nrows= input_size\n",
-    "        ncolumns=layers[0].n_perceptrons\n",
+    "        nrows= layers[0].n_perceptrons\n",
+    "        ncolumns=input_size\n",
     "        self.sequence=[_Layer(size=(nrows ,ncolumns), activation= layers[0].activation)]\n",
+    "\n",
     "        for layer in layers[1:]:\n",
-    "            nrows= ncolumns\n",
-    "            ncolumns = layer.n_perceptrons\n",
+    "            ncolumns = nrows\n",
+    "            nrows= layer.n_perceptrons\n",
+    "            \n",
     "            self.sequence.append(_Layer(size=(nrows ,ncolumns), activation= layer.activation ))\n",
     "\n",
     "    \n",
@@ -82,7 +85,7 @@
     "            raise ValueError(\"Length of vector does not match the expected input shape.\")\n",
     "        \n",
     "        for layer in self.sequence:\n",
-    "            vector = layer.weights.t().mv(vector) #matrix vector multiplication of input layers \n",
+    "            vector = layer.weights.mv(vector) #matrix vector multiplication of input layers \n",
     "            if layer.activation == \"relu\":\n",
     "                vector=vector.clamp(min=0) #relu activation function\n",
     "            if layer.activation == \"sigmoid\":\n",
@@ -96,7 +99,7 @@
     "            raise ValueError(\"Length of vector does not match the expected input shape.\")\n",
     "        vectors=[vector]\n",
     "        for i,layer in enumerate(self.sequence):\n",
-    "            vector = layer.weights.t().mv(vector) #matrix vector multiplication of input layers \n",
+    "            vector = layer.weights.mv(vector) #matrix vector multiplication of input layers \n",
     "            \n",
     "            if layer.activation == \"relu\":\n",
     "                vector=vector.clamp(min=0) #relu activation function\n",
@@ -110,7 +113,7 @@
     "        if len(vector) != self.input_size: #input size is not flexible, must correspond to the model one\n",
     "            raise ValueError(\"Length of vector does not match the expected input shape.\")\n",
     "        for i,layer in enumerate(self.sequence):\n",
-    "            vector = layer.weights.t().mv(vector) #matrix vector multiplication of input layers \n",
+    "            vector = layer.weights.mv(vector) #matrix vector multiplication of input layers \n",
     "            \n",
     "            if layer.activation == \"relu\":\n",
     "                vector=vector.clamp(min=0) #relu activation function\n",
@@ -119,8 +122,8 @@
     "            #if layer.activation == \"none\":\n",
     "        return vector\n",
     "    \n",
-    "    def train(self, train_x, train_y, val_x, val_y, max_epochs=3, step_size=0.001):\n",
-    "        #add initial train and validation loss and accuracy\n",
+    "    def train_(self, train_x, train_y, val_x, val_y, max_epochs=3, step_size=0.001):\n",
+    "        '''train the model with data, in place, returns None'''\n",
     "        n_train=len(train_x)\n",
     "        n_val=len(val_x)\n",
     "\n",
@@ -165,31 +168,39 @@
     "\n",
     "        #relu activation \n",
     "        v=vectors[-1]\n",
-    "        v_stable = v - v.max()\n",
-    "        dLdzi=v_stable.exp()/v_stable.exp().sum() #notice that dLdzi contains the predicted softmax probabilities\n",
-    "        dLdzi[y]-=1 #loss derivative for increasing the correct prediciton is negative, simply subtracting -1 \n",
+    "        v_stable = v - v.max() #more stable version to calculate gradient\n",
+    "        dLdzi=v_stable.exp()/v_stable.exp().sum() \n",
+    "        dLdzi[y]-=1 #notice that dLdzi contains the predicted softmax probabilities\n",
+    "         #loss derivative for increasing the correct prediciton is negative, simply subtracting -1 \n",
     "\n",
     "        #now let's see the matrix of weight Wk, the gradient is trivially calculated as\n",
     "         #it's an outer product, because with the chain rule, the previous vector value is involved and the resulting vector gradient is involved\n",
     "        for i in range(-2,-len(vectors)-1,-1):\n",
+    "\n",
+    "            if dLdzi.norm() > 5: #gradient clipping to avoid gradient explosion\n",
+    "                #print(f\"reduced norm {dLdzi.norm()} to {5}\")\n",
+    "                dLdzi = dLdzi * (5 / dLdzi.norm())\n",
+    "\n",
     "            #print(f\"layer: {i+1}\\nweights before:\\n{self.sequence[i+1].weights}\")\n",
     "            v=vectors[i]\n",
     "            #now let's see the matrix of weight Wk, the gradient is trivially calculated as\n",
-    "            dLdw=torch.outer(v,dLdzi )  #it's an outer product, because with the chain rule, the previous vector value is involved and the resulting vector gradient is involved\n",
+    "            dLdw=torch.outer(dLdzi, v )  #it's an outer product, because with the chain rule, the previous vector value is involved and the resulting vector gradient is involved\n",
     "            \n",
     "            #i calculate chain rule iteratively\n",
-    "            mask = (v > 0).to(dtype=dLdzi.dtype) \n",
-    "            dLdzi = (self.sequence[i+1].weights @ dLdzi) * mask #compute the gradient for previous z vector, \n",
+    "            mask = (v > 0).to(dtype=dLdzi.dtype)  #only when relu(z)>0, the derivative is not zero\n",
+    "            dLdzi = (self.sequence[i+1].weights.t() @ dLdzi) * mask #compute the gradient for previous z vector, \n",
     "\n",
     "            #each column ith element must be subtracted of the value of the previous vector ith value\n",
     "            self.sequence[i+1].weights -= dLdw*step_size #descend the gradient for the weights \n",
+    "\n",
+    "\n",
     "            #print(f\"\\nweights after:\\n{self.sequence[i+1].weights}\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,63 +235,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 | Train Loss: 2.2013 | Train Acc: 0.1525 | Val Loss: 2.0638 | Val Acc: 0.2089\n",
-      "Epoch   1 | Train Loss: 2.0453 | Train Acc: 0.2182 | Val Loss: 1.9488 | Val Acc: 0.2593\n",
-      "Epoch   2 | Train Loss: 1.2943 | Train Acc: 0.5268 | Val Loss: 0.5506 | Val Acc: 0.8527\n",
-      "Epoch   3 | Train Loss: 0.3877 | Train Acc: 0.8940 | Val Loss: 0.3395 | Val Acc: 0.9125\n",
-      "Epoch   4 | Train Loss: 0.2886 | Train Acc: 0.9234 | Val Loss: 0.3226 | Val Acc: 0.9200\n",
-      "Epoch   5 | Train Loss: 0.2506 | Train Acc: 0.9338 | Val Loss: 0.2924 | Val Acc: 0.9294\n",
-      "Epoch   6 | Train Loss: 0.2264 | Train Acc: 0.9401 | Val Loss: 0.2639 | Val Acc: 0.9368\n",
-      "Epoch   7 | Train Loss: 0.2068 | Train Acc: 0.9448 | Val Loss: 0.2480 | Val Acc: 0.9414\n",
-      "Epoch   8 | Train Loss: 0.1928 | Train Acc: 0.9483 | Val Loss: 0.2215 | Val Acc: 0.9465\n",
-      "Epoch   9 | Train Loss: 0.1818 | Train Acc: 0.9521 | Val Loss: 0.2264 | Val Acc: 0.9444\n",
-      "Epoch  10 | Train Loss: 0.1734 | Train Acc: 0.9540 | Val Loss: 0.2056 | Val Acc: 0.9499\n",
-      "Epoch  11 | Train Loss: 0.1647 | Train Acc: 0.9564 | Val Loss: 0.1992 | Val Acc: 0.9516\n",
-      "Epoch  12 | Train Loss: 0.1575 | Train Acc: 0.9585 | Val Loss: 0.2172 | Val Acc: 0.9490\n",
-      "Epoch  13 | Train Loss: 0.1535 | Train Acc: 0.9587 | Val Loss: 0.2209 | Val Acc: 0.9463\n",
-      "Epoch  14 | Train Loss: 0.1488 | Train Acc: 0.9608 | Val Loss: 0.2209 | Val Acc: 0.9466\n",
-      "Epoch  15 | Train Loss: 0.1419 | Train Acc: 0.9620 | Val Loss: 0.2218 | Val Acc: 0.9503\n",
-      "Epoch  16 | Train Loss: 0.1417 | Train Acc: 0.9629 | Val Loss: 0.2045 | Val Acc: 0.9518\n",
-      "Epoch  17 | Train Loss: 0.1382 | Train Acc: 0.9642 | Val Loss: 0.2334 | Val Acc: 0.9472\n",
-      "Epoch  18 | Train Loss: 0.1342 | Train Acc: 0.9648 | Val Loss: 0.2145 | Val Acc: 0.9517\n",
-      "Epoch  19 | Train Loss: 0.1305 | Train Acc: 0.9658 | Val Loss: 0.1982 | Val Acc: 0.9550\n"
+      "Epoch   0 | Train Loss: 0.3285 | Train Acc: 0.9057 | Val Loss: 0.1859 | Val Acc: 0.9428\n",
+      "Epoch   1 | Train Loss: 0.1397 | Train Acc: 0.9591 | Val Loss: 0.1362 | Val Acc: 0.9576\n",
+      "Epoch   2 | Train Loss: 0.0977 | Train Acc: 0.9719 | Val Loss: 0.1156 | Val Acc: 0.9633\n",
+      "Epoch   3 | Train Loss: 0.0737 | Train Acc: 0.9788 | Val Loss: 0.1015 | Val Acc: 0.9696\n",
+      "Epoch   4 | Train Loss: 0.0572 | Train Acc: 0.9838 | Val Loss: 0.0963 | Val Acc: 0.9712\n",
+      "Epoch   5 | Train Loss: 0.0451 | Train Acc: 0.9879 | Val Loss: 0.0914 | Val Acc: 0.9740\n",
+      "Epoch   6 | Train Loss: 0.0357 | Train Acc: 0.9909 | Val Loss: 0.0871 | Val Acc: 0.9749\n",
+      "Epoch   7 | Train Loss: 0.0284 | Train Acc: 0.9934 | Val Loss: 0.0864 | Val Acc: 0.9760\n",
+      "Epoch   8 | Train Loss: 0.0226 | Train Acc: 0.9953 | Val Loss: 0.0862 | Val Acc: 0.9759\n",
+      "Epoch   9 | Train Loss: 0.0178 | Train Acc: 0.9965 | Val Loss: 0.0877 | Val Acc: 0.9764\n",
+      "Epoch  10 | Train Loss: 0.0141 | Train Acc: 0.9974 | Val Loss: 0.0875 | Val Acc: 0.9766\n",
+      "Epoch  11 | Train Loss: 0.0111 | Train Acc: 0.9984 | Val Loss: 0.0865 | Val Acc: 0.9778\n",
+      "Epoch  12 | Train Loss: 0.0089 | Train Acc: 0.9988 | Val Loss: 0.0871 | Val Acc: 0.9785\n",
+      "Epoch  13 | Train Loss: 0.0071 | Train Acc: 0.9991 | Val Loss: 0.0887 | Val Acc: 0.9778\n",
+      "Epoch  14 | Train Loss: 0.0057 | Train Acc: 0.9994 | Val Loss: 0.0900 | Val Acc: 0.9775\n",
+      "Epoch  15 | Train Loss: 0.0047 | Train Acc: 0.9995 | Val Loss: 0.0907 | Val Acc: 0.9780\n",
+      "Epoch  16 | Train Loss: 0.0038 | Train Acc: 0.9996 | Val Loss: 0.0921 | Val Acc: 0.9786\n",
+      "Epoch  17 | Train Loss: 0.0032 | Train Acc: 0.9998 | Val Loss: 0.0935 | Val Acc: 0.9783\n",
+      "Epoch  18 | Train Loss: 0.0026 | Train Acc: 0.9999 | Val Loss: 0.0948 | Val Acc: 0.9784\n",
+      "Epoch  19 | Train Loss: 0.0022 | Train Acc: 0.9999 | Val Loss: 0.0961 | Val Acc: 0.9784\n"
      ]
     }
    ],
    "source": [
     "#|export\n",
     "\n",
-    "sequence = [Layer(32,\"relu\") for _ in range(2)] +[Layer(16,\"relu\") for _ in range(1)]+ [Layer(10,\"none\")]\n",
+    "#sequence = [Layer(32,\"relu\") for _ in range(1)] +[Layer(16,\"relu\") for _ in range(1)]+ [Layer(10,\"none\")]\n",
     "\n",
-    "m1= MLP_Model( layers = sequence , input_size= 784, seed=1234)\n",
+    "sequence = [Layer(256,\"relu\"),Layer(128,\"relu\"), Layer(64,\"relu\"),Layer(10,\"none\") ]\n",
+    "\n",
+    "m1= MLP_Model( layers = sequence , input_size= 784, seed=42)\n",
     "\n",
     "train_x, train_y =zip(*train_dataset)\n",
     "test_x, test_y =zip(*test_dataset)\n",
     "\n",
     "#train and validate on the whole dataset\n",
-    "m1.train(train_x=train_x, train_y=train_y, val_x=test_x, val_y=test_y, step_size=0.01, max_epochs=20)"
+    "m1.train_(train_x=train_x, train_y=train_y, val_x=test_x, val_y=test_y, step_size=0.001, max_epochs=20) \n",
+    "\n",
+    "#lowest validation loss at epoch 11\n",
+    "#Epoch  11 | Train Loss: 0.0111 | Train Acc: 0.9984 | Val Loss: 0.0865 | Val Acc: 0.9778"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from nbdev.export import nb_export\n",
-    "nb_export(nbname=\"functions.ipynb\")"
+    "nb_export(nbname=\"Neural_network_from_scratch.ipynb\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
